Fixed Hero content overflowing in mobile landscape

--- a/src/Stylesheets/Hero.module.css
+++ b/src/Stylesheets/Hero.module.css
@@ -1,6 +1,6 @@
 .Hero {
   display: flex;
-  height: min(calc(100vh - 72px), 700px);
+  height: max(calc(100vh - 72px), 700px);
 }
 
 .Hero-img {
